<resources>
    <string name="app_name">공ZONE</string>
    <string name="near_me">내 근처</string>
    <string name="search">검색</string>
    <string name="use_status">이용현황</string>
    <string name="my">MY</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_hint">장소, 지역, 학교 검색</string>
    <string name="user">사용자</string>
    <string name="use_history">이용내역</string>
    <string name="voucher_purchase">이용권 구매</string>
    <string name="voucher_purchase_history">이용권 구매 내역</string>
    <string name="favorites">관심 목록</string>
    <string name="coupon">쿠폰</string>
    <string name="notice">공지사항</string>
    <string name="customer_service">고객센터</string>
    <string name="setting">설정</string>
    <string name="sign_in">로그인</string>
    <string name="sign_in_title">공ZONE에 로그인해 주세요.</string>
    <string name="sign_in_sub_title">먼저 로그인 한다면 이용권 구매시 아주 편리해요!</string>
    <string name="id">아이디</string>
    <string name="password">비밀번호</string>
    <string name="sign_up">회원가입</string>
    <string name="find_id">아이디 찾기</string>
    <string name="find_pwd">비밀번호 찾기</string>
    <string name="gonezone_pick">공ZONE #PICK</string>
    <string name="max_rating">/5</string>
    <string name="meter">m</string>
    <string name="review">후기</string>
    <string name="gongzone_near">내 근처 공ZONE</string>
    <string name="division">/</string>
    <string name="search_filter">검색 필터</string>
    <string name="notification">알림</string>
    <string name="point_4_higher">평점 4.0 이상</string>
    <string name="current_enter_possible">현재 입실 가능</string>
    <string name="time">시간</string>
    <string name="facility">시설</string>
    <string name="square_table">사각테이블</string>
    <string name="individual_stand">개인스탠드</string>
    <string name="white_light">주백색조명</string>
    <string name="restroom">남녀화장실</string>
    <string name="socket">콘센트</string>
    <string name="backrest_chair">등받이의자</string>
    <string name="table_type">테이블 타입</string>
    <string name="small">스몰</string>
    <string name="medium">미디움</string>
    <string name="large">라지</string>
    <string name="rentable_item">대여 가능 품목</string>
    <string name="charger">충전기</string>
    <string name="reading_prop">독서받침대</string>
    <string name="blanket">담요</string>
    <string name="name">이름</string>
    <string name="input_name">이름 입력</string>
    <string name="phone_num">휴대폰 번호</string>
    <string name="input_phone_num">휴대폰 번호 입력</string>
    <string name="input_email">이메일 주소 입력</string>
    <string name="input_password_digit">비밀번호 8~16자 입력</string>
    <string name="check_password">비밀번호 확인</string>
    <string name="next">다음</string>
    <string name="all_terms_agree">모든 약관에 동의합니다.</string>
    <string name="user_terms_agree">(필수) 회원 이용약관 동의</string>
    <string name="privacy_policy_agree">(필수) 개인정보 처리방침 동의</string>
    <string name="location_service_agree">(선택) 위치기반 서비스 이용약관 동의</string>
    <string name="receive_marketing_service_agree">(선택) 마케팅 정보 수신 동의</string>
    <string name="bar">|</string>
    <string name="mid_dot">·</string>
    <string name="guidelines_for_refund">이용 환불 규정 안내</string>
    <string name="guidelines_for_refund_content">이용 환불은 고객센터에 문의해 주세요.</string>
    <string name="seat_status">좌석 현황</string>
    <string name="remain_seat">총 잔여 좌석:</string>
    <string name="remain_seats_by_table_type">테이블 타입별 잔여 좌석</string>
    <string name="store_intro">매장 소개</string>
    <string name="store_info">매장 정보</string>
    <string name="business_hours">영업시간</string>
    <string name="phone">전화번호</string>
    <string name="notice_and_event">공지·이벤트</string>
    <string name="rentable">대여 가능</string>
    <string name="use_review">이용 후기</string>
</resources>