<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.sign.InputUserInfoFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:paddingStart="31dp"
        android:paddingEnd="31dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="45dp"
            android:text="@string/name"
            style="@style/InputInfoTextStyle"/>

        <EditText
            android:id="@+id/nameEdt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:hint="@string/input_name"
            android:inputType="text"
            style="@style/InputInfoEditTextStyle" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/phone_num"
            style="@style/InputInfoTextStyle"/>

        <EditText
            android:id="@+id/phoneNumEdt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:hint="@string/input_phone_num"
            android:inputType="phone"
            style="@style/InputInfoEditTextStyle" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/id"
            style="@style/InputInfoTextStyle" />

        <EditText
            android:id="@+id/emailEdt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:hint="@string/input_email"
            android:inputType="textEmailAddress"
            style="@style/InputInfoEditTextStyle" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/password"
            style="@style/InputInfoTextStyle" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:hint="@string/input_password_digit"
            android:inputType="textPassword"
            style="@style/InputInfoEditTextStyle" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/check_password"
            style="@style/InputInfoTextStyle" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:hint="@string/input_password_digit"
            android:inputType="textPassword"
            style="@style/InputInfoEditTextStyle" />
    </LinearLayout>

    <LinearLayout
        style="@style/BottomButtonBackgroundLayoutStyle"
        android:id="@+id/linearLayout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageButton
            android:id="@+id/signUpBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_btn_sign_up" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>