<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.main.SearchFilterActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        app:contentInsetStart="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/backBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:src="@drawable/ic_back"
            android:background="?selectableItemBackgroundBorderless" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:text="@string/search_filter"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:fontFamily="@font/noto_sans_cjk_kr_bold" />
    </androidx.appcompat.widget.Toolbar>

    <View
        android:id="@+id/view2"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/gray_200"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/chipGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp">

                <com.google.android.material.chip.Chip
                    android:id="@+id/pointFourHigherChip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/noto_sans_cjk_kr_medium"
                    android:text="@string/point_4_higher"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/currentEnterPossibleChip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/noto_sans_cjk_kr_medium"
                    android:text="@string/current_enter_possible"
                    android:textColor="@color/black"
                    android:textSize="14sp" />
            </com.google.android.material.chip.ChipGroup>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="16dp"
                android:background="@color/gray_400" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/noto_sans_cjk_kr_bold"
                android:includeFontPadding="false"
                android:text="@string/time"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <LinearLayout
                android:id="@+id/timeStartToEnd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                android:orientation="horizontal"
                android:paddingStart="16dp"
                android:paddingEnd="16dp">

                <TextView
                    android:id="@+id/startTimeTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/noto_sans_cjk_kr_regular"
                    android:includeFontPadding="false"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:fontFamily="@font/noto_sans_cjk_kr_regular"
                    android:includeFontPadding="false"
                    android:text="-"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/endTimeTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/noto_sans_cjk_kr_regular"
                    android:includeFontPadding="false"
                    android:textColor="@color/black"
                    android:textSize="14sp" />
            </LinearLayout>

            <com.google.android.material.slider.RangeSlider
                android:id="@+id/timeSlider"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:valueFrom="0"
                android:valueTo="24"
                app:values="@array/time_slider" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="16dp"
                android:background="@color/gray_400" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/noto_sans_cjk_kr_bold"
                android:includeFontPadding="false"
                android:text="@string/facility"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/facilityGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp">

                <com.google.android.material.chip.Chip
                    android:id="@+id/squareTableChip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/noto_sans_cjk_kr_medium"
                    android:text="@string/square_table"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/individualStandChip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/noto_sans_cjk_kr_medium"
                    android:text="@string/individual_stand"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/whiteLightChip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/noto_sans_cjk_kr_medium"
                    android:text="@string/white_light"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/socketChip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/noto_sans_cjk_kr_medium"
                    android:text="@string/socket"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/backrestChairChip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/noto_sans_cjk_kr_medium"
                    android:text="@string/backrest_chair"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/restroomChip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/noto_sans_cjk_kr_medium"
                    android:text="@string/restroom"
                    android:textColor="@color/black"
                    android:textSize="14sp" />
            </com.google.android.material.chip.ChipGroup>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="16dp"
                android:background="@color/gray_400" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/noto_sans_cjk_kr_bold"
                android:includeFontPadding="false"
                android:text="@string/table_type"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/tableTypeGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp">

                <com.google.android.material.chip.Chip
                    android:id="@+id/smallTableChip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/noto_sans_cjk_kr_medium"
                    android:text="@string/small"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/mediumTableChip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/noto_sans_cjk_kr_medium"
                    android:text="@string/medium"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/largeTableChip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/noto_sans_cjk_kr_medium"
                    android:text="@string/large"
                    android:textColor="@color/black"
                    android:textSize="14sp" />
            </com.google.android.material.chip.ChipGroup>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="16dp"
                android:background="@color/gray_400" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/noto_sans_cjk_kr_bold"
                android:includeFontPadding="false"
                android:text="@string/rentable_item"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/rentableItemGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                android:layout_marginBottom="20dp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp">

                <com.google.android.material.chip.Chip
                    android:id="@+id/chargerChip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/noto_sans_cjk_kr_medium"
                    android:text="@string/charger"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/readingPropChip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/noto_sans_cjk_kr_medium"
                    android:text="@string/reading_prop"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/blanketChip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/noto_sans_cjk_kr_medium"
                    android:text="@string/blanket"
                    android:textColor="@color/black"
                    android:textSize="14sp" />
            </com.google.android.material.chip.ChipGroup>
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:elevation="10dp"
        android:orientation="horizontal"
        android:paddingStart="16dp"
        android:paddingTop="8dp"
        android:paddingEnd="16dp"
        android:paddingBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageButton
            android:id="@+id/resetBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:src="@drawable/ic_reset_btn" />

        <ImageButton
            android:id="@+id/applyBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:src="@drawable/ic_apply_btn" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>